# guppy-ics

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
guppy_ics/: launcher.py
guppy_ics/analysis/: calibration.py  run.py
guppy_ics/cli/: guppy.py
guppy_ics/core/: capture.py  control.py  dispatcher.py  state.py
guppy_ics/core/sources/: base.py  live.py  pcap.py
guppy_ics/protocols/: __init__.py  arp.py  base.py  dnp3.py  iec104.py  ipv6.py  l2l3.py  mac_helper.py  modbus.py  opcua.py  profinet.py  registry.py  s7comm.py  snmp.py  tcp.py  transport.py  udp.py
guppy_ics/sources/: live_pcap.py
guppy_ics/web/: app.py  deps.py  progress.py
guppy_ics/web/routes/: calibration.py  help.py  progress.py  upload.py
guppy_ics/web/static/css/: style.css
guppy_ics/web/templates/: base.html  calibration.html  calibration_result.html  help.html  index.html  upload.html  upload_progress.html  upload_result.html
tests/: test_state_basic.py
